# daemon

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  appveyor_jwt-cpp.bat  appveyor_protobuf.bat  appveyor_zmq.bat  daemon.config  focus_installer.nsi  main.cpp  travis_jwt-cpp.sh  travis_protobuf.sh
Linux/: CMakeLists.txt  focus-daemon.desktop  main.cpp  toggleDoNotDisturb.sh
Linux/Headers/: AfkListener.hpp  ContextAgent.hpp  DisturbAgent.hpp  Dummy.hpp  KeyListener.hpp  MouseListener.hpp  WindowsContextAgent.hpp
Linux/Sources/: AfkListener.cpp  ContextAgent.cpp  DisturbAgent.cpp  Dummy.cpp  KeyListener.cpp  MouseListener.cpp  WindowsContextAgent.cpp
Linux/UnitTests/: CMakeLists.txt  DummyTest.cpp
MacOs/: CMakeLists.txt  Info.plist  main.cpp  printAppTitle.scpt  start-daemon-osx.sh  toggleDoNotDisturb.sh
MacOs/Headers/: AfkListener.hpp  ContextAgent.hpp  WindowsContextAgent.hpp
MacOs/Sources/: AfkListener.cpp  ContextAgent.cpp  WindowsContextAgent.cpp
MacOs/UnitTests/: CMakeLists.txt
Shared/: CMakeLists.txt  TestShared.cpp  TestShared.hpp
Shared/Headers/: FocusAuthenticator.hpp  FocusConfiguration.hpp  FocusDaemon.hpp  FocusEventEmitter.hpp  FocusEventListener.hpp  FocusEventManager.hpp  FocusKeyLogger.hpp  FocusNetworkManager.hpp  FocusPlatformFolders.hpp  FocusSecureSocket.hpp  FocusSerializer.hpp  FocusSocket.hpp  FocusUI.hpp
Shared/Interfaces/: IAfkListener.hpp  IContextAgent.hpp  IDisturbAgent.hpp  IFocusDaemon.hpp  IFocusEventEmitter.hpp  IFocusEventListener.hpp  IFocusEventManager.hpp  IFocusKeyLogger.hpp  IFocusNetworkManager.hpp  IFocusSocket.hpp  IKeyListener.hpp  IMouseListener.hpp
Shared/Proto/: FocusContextEventPayload.proto  FocusEnvelope.proto  FocusEvent.proto  FocusKeyEventPayload.proto  FocusMouseEventPayload.proto  generate.bat  generate.sh
Shared/Proto/ProtoCompiled/: FocusContextEventPayload.pb.cc  FocusContextEventPayload.pb.h  FocusEnvelope.pb.cc  FocusEnvelope.pb.h  FocusEvent.pb.cc  FocusEvent.pb.h  FocusKeyEventPayload.pb.cc  FocusKeyEventPayload.pb.h  FocusMouseEventPayload.pb.cc  FocusMouseEventPayload.pb.h
Shared/Sources/: FocusAuthenticator.cpp  FocusConfiguration.cpp  FocusDaemon.cpp  FocusEventEmitter.cpp  FocusEventManager.cpp  FocusKeyLogger.cpp  FocusNetworkManager.cpp  FocusPlatformFolders.cpp  FocusSerializer.cpp  FocusSocket.cpp  FocusUI.cpp
Shared/UnitTests/: CMakeLists.txt  DummyTest.cpp
UnitTests/: CMakeLists.txt
Unix/: CMakeLists.txt  TestUnix.cpp  TestUnix.hpp  main.cpp
Unix/UnitTests/: CMakeLists.txt  DummyTest.cpp
Windows/: CMakeLists.txt  Info.rc  TestWindows.cpp  TestWindows.hpp  main.cpp
Windows/Headers/: AfkListener.hpp  ContextAgent.hpp  DisturbAgent.hpp  FocusDaemon.hpp  FocusEventEmitter.hpp  FocusEventListener.hpp  FocusEventManager.hpp  FocusKeyLogger.hpp  FocusNetworkManager.hpp  KeyListener.hpp  MouseListener.hpp  WindowsContextAgent.hpp
Windows/Interfaces/: IWindowsContextAgent.hpp
Windows/Sources/: AfkListener.cpp  ContextAgent.cpp  DisturbAgent.cpp  FocusEventListener.cpp  FocusEventManager.cpp  FocusKeyLogger.cpp  FocusNetworkManager.cpp  KeyListener.cpp  MouseListener.cpp  WindowsContextAgent.cpp
Windows/UnitTests/: CMakeLists.txt  DummyTest.cpp
assets/: app.html  icon_daemon.icns  login.html
cmake/: FindJWTCPP.cmake  FindZMQ.cmake  FindZeroMQ.cmake  dependency.cmake  git.cmake
docs/: daemon.puml  protobuf_envelope.puml
nanomsg/: CMakeLists.txt
nanomsg/src/: CMakeLists.txt
